--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html lang="es">
     <head>
           <meta charset="UTF-8">
@@ -21,7 +21,7 @@
                   
                  <ul class="menu">
 
-                        <li> <a href="Index Renovado.html">INICIO</a></li>
+                        <li> <a href="index.html">INICIO</a></li>
               
                         <li> <a href="./Sub-Página/Actualidad.html">ACTUALIDAD</a> </li>
 
