--- a/Sub-Páginas/Sub-Menu/El_Club/Peñas.html
+++ b/Sub-Páginas/Sub-Menu/El_Club/Peñas.html
@@ -12,7 +12,7 @@
             <!-- CABECERA -->
             <header class="cabecera">
 
-                  <img src="../../../Imagenes/xer.png" alt="Logo" class="logo">
+                  <img src="../../../Imágenes/xer.png" alt="Logo" class="logo">
 
                   <h1>Xerez Deportivo Futbol Club</h1>  <!-- Si quisiera ANCLAR el titulo para que alfinal de la página me lleve hacia el princio deberia cambiar <P> por <H1> -->
 
@@ -20,7 +20,7 @@
                   
                   <ul class="menu">
 
-                              <li> <a href="../../../Index Renovado.html">INICIO</a></li>
+                              <li> <a href="../../../index.html">INICIO</a></li>
               
                               <li> <a href="../../Actualidad.html">ACTUALIDAD</a> </li>
 
