--- a/Sub-Páginas/Sub-Menu/El_Club/Historia.html
+++ b/Sub-Páginas/Sub-Menu/El_Club/Historia.html
@@ -4,7 +4,7 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Xerez Deportivo Futbol Club</title>
-          <link rel="stylesheet" href="../../../ccs/EstiloInd.css">
+          <link rel="stylesheet" href="../../../CSS/EstiloInd.css">
     </head>
 
     <body>
@@ -12,7 +12,7 @@
             <!-- CABECERA -->
             <header class="cabecera">
 
-                  <img src="../../../Imagenes/xer.png" alt="Logo" class="logo">
+                  <img src="../../../Imágenes/xer.png" alt="Logo" class="logo">
 
                   <h1>Xerez Deportivo Futbol Club</h1>  <!-- Si quisiera ANCLAR el titulo para que alfinal de la página me lleve hacia el princio deberia cambiar <P> por <H1> -->
 
