--- a/Sub-Páginas/Sub-Menu/El_Club/Historia.html
+++ b/Sub-Páginas/Sub-Menu/El_Club/Historia.html
@@ -20,7 +20,7 @@
                   
                   <ul class="menu">
 
-                              <li> <a href="../../../Index Renovado.html">INICIO</a></li>
+                              <li> <a href="../../../index.html">INICIO</a></li>
               
                               <li> <a href="../../Actualidad.html">ACTUALIDAD</a> </li>
 
