--- a/Nav/Contacto.html
+++ b/Nav/Contacto.html
@@ -6,7 +6,7 @@
           <meta name="description" content="Blog sobre el Xerez Deportivo FC con noticias, fichajes, resultados, historia y análisis del equipo de Jerez.">
           <meta name="author" content="Francisco de Paula Peña Mera">
           <title>Xerez Deportivo Futbol Club</title>
-          <link rel="stylesheet" href="../ccs/Estilos.css">
+          <link rel="stylesheet" href="../css/Estilos.css">
     </head>
 
     <body>
