--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
               </footer>
 
-<script src="javascript.js"></script>
+    <script src="./JavaScript/javascript.js"></script>
 
     </body>
 
