--- a/Nav/La_Aficion.html
+++ b/Nav/La_Aficion.html
@@ -120,7 +120,7 @@
 
               </footer>
 
-              <script src="../javascript.js"></script>
+              <script src="../JavaScript/javascript.js"></script>
               
     </body>
 
