--- a/Nav/SubMenu/Primer_Equipo/Calendario.html
+++ b/Nav/SubMenu/Primer_Equipo/Calendario.html
@@ -105,7 +105,7 @@
 
               </footer>
 
-              <script src="../javascript.js"></script>
+              <script src="../../../JavaScript/javascript.js"></script>
               
     </body>
 
