--- a/Nav/SubMenu/El_Club/Mascota.html
+++ b/Nav/SubMenu/El_Club/Mascota.html
@@ -142,7 +142,7 @@
 
               </footer>
 
-              <script src="../javascript.js"></script>
+              <script src="../../../JavaScript/javascript.js"></script>
               
     </body>
 
