--- a/Nav/SubMenu/El_Club/Peñas.html
+++ b/Nav/SubMenu/El_Club/Peñas.html
@@ -101,7 +101,7 @@
 
               </footer>
 
-              <script src="../javascript.js"></script>
+             <script src="../../../JavaScript/javascript.js"></script>
               
     </body>
 
